--- a/packages/theme-chalk/src/common/var.scss
+++ b/packages/theme-chalk/src/common/var.scss
@@ -183,6 +183,9 @@ $box-shadow: map.merge(
 );
 
 // Typography
+$--font-path: 'fonts' !default;
+$--font-display: 'auto' !default;
+
 $font-family: () !default;
 $font-family: map.merge(
   (
